# edal_schema

./: .gitignore  CMakeLists.txt  README.md  core.cpp  core.h  main.cpp
lib/: core.cpp  core.h  menu.cpp  menu.h  tasks.cfg  tasks.txt  workers.cfg  workers.txt
lib/config/: genders.cfg  positions.cfg  tasks.cfg  workers.cfg
lib/saves/: 2018-09-04.cfg
tests/: ClassName.h  test.cpp
